--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a10</version>
-    <!--##teamcity[buildNumber '1.0a10']-->
+    <version>1.0a11</version>
+    <!--##teamcity[buildNumber '1.0a11']-->
     <idea-version since-build="99.18" until-build="107.9999" />
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -47,7 +47,7 @@
                 <li>Code completion</li>
                 <li>1 quickfix</li>
                 <li>6 code intentions</li>
-                <li>6 code inspection</li>
+                <li>11 code inspection</li>
                 <li>Script execution and run configurations</li>
                 <li>Kahlua REPL Console</li>
                 <li>Lua REPL Console</li>
@@ -65,6 +65,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>1.0a11</dt>
+            <dd>Added the "suspicious global creation" and "Parameter hides implicit self" inspection</dd><br>
             <dt>1.0a10</dt>
             <dd>Fix the error reporter and language console up down arrow keys to cylcle through command history</dd><br>
             <dt>1.0a06-9</dt>
