--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a18</version>
-    <!--##teamcity[buildNumber '1.0a18']-->
+    <version>1.0a19</version>
+    <!--##teamcity[buildNumber '1.0a19']-->
     <idea-version since-build="110.3" until-build="110.99"/>
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -66,6 +66,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
+            <dt>1.0a19</dt>
+            <dd>Bug Fixes</dd><br>
             <dt>1.0a18</dt>
             <dd>IDEA 11 Support (110+)</dd><br>
             <dt>1.0a17</dt>
