--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,8 +17,8 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a21</version>
-    <!--##teamcity[buildNumber '1.0a21']-->
+    <version>1.0a21a</version>
+    <!--##teamcity[buildNumber '1.0a21a']-->
     <idea-version since-build="110.137" until-build="110.9999"/>
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
