--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -73,6 +73,9 @@ moduletype.name=Lua Module
 sdk.chooser.luabinaries.prompt=Specify the Lua binaries directory
 sdk.chooser.select.sdk.prompt=Lua SDK version:
 sdk.chooser.configure.button=Configure...
+kahlua.componentname=Kahlua Virtual SDK
+luaj.componentname=LuaJ Virtual SDK
+lua.filetype=Lua source file
 
 
 
