--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -76,6 +76,7 @@ sdk.chooser.configure.button=Configure...
 kahlua.componentname=Kahlua Virtual SDK
 luaj.componentname=LuaJ Virtual SDK
 lua.filetype=Lua source file
+color.settings.semi=Semicolon
 
 
 
