--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -295,9 +295,9 @@
     <depends optional="true" config-file="lua-copyright.xml">com.intellij.copyright</depends>
 
     <application-components>
-        <!--<component>-->
-            <!--<implementation-class>com.sylvanaar.idea.Lua.sdk.KahluaSdk</implementation-class>-->
-        <!--</component>-->
+        <component>
+            <implementation-class>com.sylvanaar.idea.Lua.sdk.KahluaSdk</implementation-class>
+        </component>
         <component>
             <implementation-class>com.sylvanaar.idea.Lua.sdk.LuaJSdk</implementation-class>
         </component>
@@ -444,7 +444,7 @@
         <consoleFilterProvider implementation="com.sylvanaar.idea.Lua.run.LuaLineErrorFilterProvider" />
 
         <!--<library.creator implementation="com.sylvanaar.idea.Lua.library.LuaLibraryCreator"/>-->
-        <library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>
+        <!--<library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>-->
         <library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>
 
         <!--Stubs-->
