--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -77,6 +77,8 @@ kahlua.componentname=Kahlua Virtual SDK
 luaj.componentname=LuaJ Virtual SDK
 lua.filetype=Lua source file
 color.settings.semi=Semicolon
+lua.usages.type=Lua Code
+luadoc.usages.type=LuaDoc Text
 
 
 
