--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -298,9 +298,9 @@
         <component>
             <implementation-class>com.sylvanaar.idea.Lua.sdk.KahluaSdk</implementation-class>
         </component>
-        <component>
-            <implementation-class>com.sylvanaar.idea.Lua.sdk.LuaJSdk</implementation-class>
-        </component>
+        <!--<component>-->
+            <!--<implementation-class>com.sylvanaar.idea.Lua.sdk.LuaJSdk</implementation-class>-->
+        <!--</component>-->
     </application-components>
 
     <project-components>
@@ -447,7 +447,7 @@
 
         <!--<library.creator implementation="com.sylvanaar.idea.Lua.library.LuaLibraryCreator"/>-->
         <!--<library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>-->
-        <library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>
+        <!--<library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>-->
 
         <!--Stubs-->
         <stubElementTypeHolder  class="com.sylvanaar.idea.Lua.lang.parser.LuaElementTypes"/>
