--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -18,7 +18,7 @@
     <name>Lua</name>
     <id>Lua</id>
     <version>1.0a21a</version>
-    <!--##teamcity[buildNumber '1.0a21a']-->
+    <!--##teamcity[buildNumber '1.0a23']-->
     <idea-version since-build="110.137" until-build="111.9999"/>
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
@@ -447,8 +447,8 @@
         <consoleFilterProvider implementation="com.sylvanaar.idea.Lua.run.LuaLineErrorFilterProvider" />
 
         <!--<library.creator implementation="com.sylvanaar.idea.Lua.library.LuaLibraryCreator"/>-->
-        <library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>
-        <library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>
+        <!--<library.presentationProvider implementation="com.sylvanaar.idea.Lua.library.LuaLibraryPresentationProvider"/>-->
+        <!--<library.type implementation="com.sylvanaar.idea.Lua.library.LuaLibraryType"/>-->
 
         <!--Stubs-->
         <stubElementTypeHolder  class="com.sylvanaar.idea.Lua.lang.parser.LuaElementTypes"/>
