--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -17,9 +17,9 @@
 <idea-plugin url="http://bitbucket.org/sylvanaar2/lua-for-idea/" version="2">
     <name>Lua</name>
     <id>Lua</id>
-    <version>1.0a24</version>
-    <!--##teamcity[buildNumber '1.0a24']-->
-    <idea-version since-build="110.137" until-build="111.9999"/>
+    <version>1.0a25</version>
+    <!--##teamcity[buildNumber '1.0a25']-->
+    <idea-version since-build="110.137" until-build="114.9999"/>
     <category>Custom Languages</category>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
     
@@ -67,8 +67,8 @@
     <change-notes><![CDATA[
         <html>
         <dl>
-            <dt>1.0a24</dt>
-            <dd>Introduces type inference based completions. Very experimental. Large number of pending fixes</dd><br>
+            <dt>1.0a24-5</dt>
+            <dd>Introduces type inference based completions. Very experimental. Large number of pending fixes, disabled by default</dd><br>
             <dt>1.0a19-23</dt>
             <dd>Bug Fixes</dd><br>
             <dt>1.0a18</dt>
@@ -325,6 +325,11 @@
                 description="Generate a source file annotated with comments containing the Lua byte-code for each line.">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
+        <!--<action id="com.sylvanaar.idea.Lua.actions.InferFile" class="com.sylvanaar.idea.Lua.actions.InferFile"-->
+                <!--text="Infer Types In File"-->
+                <!--description="Run type inference in the file">-->
+            <!--<add-to-group group-id="ToolsMenu" anchor="last"/>-->
+        <!--</action>-->
     </actions>
 
     <helpset file="IDLuaHelp.jar" path="/Lua.hs" />
