--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -430,6 +430,10 @@
         <treeStructureProvider implementation="com.sylvanaar.idea.Lua.projectView.LuaProjectTreeSubElementProvider" />
         <lang.refactoringSupport language="Lua" implementationClass="com.sylvanaar.idea.Lua.refactoring.LuaRefactoringSupportProvider" />
 
+        <itemPresentationProvider forClass="com.sylvanaar.idea.Lua.lang.psi.LuaPsiElement" implementationClass="com.sylvanaar.idea.Lua.lang.psi.presentation.LuaElementPresentationProvider" />
+
+        <constantExpressionEvaluator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.psi.util.LuaConstantExpressionEvaluator" />
+        
         <!--Find Usages-->
         <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider" />
         <usageTypeProvider implementation="com.sylvanaar.idea.Lua.findUsages.LuaUsageTypeProvider"/>
