--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -434,7 +434,7 @@
 
         <itemPresentationProvider forClass="com.sylvanaar.idea.Lua.lang.psi.LuaPsiElement" implementationClass="com.sylvanaar.idea.Lua.lang.psi.presentation.LuaElementPresentationProvider" />
 
-        <constantExpressionEvaluator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.psi.util.LuaConstantExpressionEvaluator" />
+        <!--<constantExpressionEvaluator language="Lua" implementationClass="com.sylvanaar.idea.Lua.lang.psi.util.LuaConstantExpressionEvaluator" />-->
         
         <!--Find Usages-->
         <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider" />
