--- a/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
+++ b/resources/com/sylvanaar/idea/Lua/LuaBundle.properties
@@ -79,6 +79,8 @@ lua.filetype=Lua source file
 color.settings.semi=Semicolon
 lua.usages.type=Lua Code
 luadoc.usages.type=LuaDoc Text
+new.library.file.chooser.title=New Library Files
+new.library.file.chooser.description=Select jar files or directories in which library files are located
 
 
 
